<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchNumbers"
        android:layout_width="347dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:checked="true"
        android:text="@string/numbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchSmallLetters"
        android:layout_width="347dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/small_letters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchNumbers" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchCapLetters"
        android:layout_width="347dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/capital_letters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchSmallLetters" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchSymbols"
        android:layout_width="347dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/special_symbols"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchCapLetters" />

    <Spinner
        android:id="@+id/spinnerLength"
        android:layout_width="142dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/switchSymbols"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="176dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/choose_the_length_of_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchSymbols" />

    <Button
        android:id="@+id/buttonGenerate"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="146dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/generate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonBack"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="146dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonGenerate"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="389dp"
        android:layout_height="88dp"
        android:layout_marginTop="16dp"
        android:text="@string/explanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGenerate" />


</androidx.constraintlayout.widget.ConstraintLayout>